--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "apollo-boost": "^0.4.9",
     "gh-pages": "^3.1.0",
+    "graphql": "^15.3.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-pro-sidebar": "^0.4.3",
     "react-redux": "^7.2.1",
