--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.4.3",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
