--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
     "apollo-boost": "^0.4.9",
     "gh-pages": "^3.1.0",
@@ -19,6 +20,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.4.3",
     "react-redux": "^7.2.1",
