--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.0.5",
     "redux-devtools": "^3.6.1",
     "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
